--- a/app/templates/tweets/index.hbs
+++ b/app/templates/tweets/index.hbs
@@ -1,1 +1,13 @@
+<ul class="list-group">
+  {{#each model as |tweet_item|}}
+    <li class="list-group-item">
+      {{#link-to 'tweet' tweet_item tagName="div"}}
+        {{tweet_item}}
+      {{/link-to}}
+    </li>
+  {{else}}
+    <li class="list-group-item">No tweets found.</li>
+  {{/each}}
+</ul>
+
 {{outlet}}
