--- a/app/templates/tweets/new.hbs
+++ b/app/templates/tweets/new.hbs
@@ -1,1 +1,13 @@
+<div class="page-header">
+  <h1>New Tweet</h1>
+</div>
+
+{{#bs-form model=this action="submit"}}
+  {{bs-form-element controlType="textarea" label="Message" placeholder="Message" property="model.message"}}
+  {{bs-form-element controlType="date" label="Scheduled" property="scheduled"}}
+  {{bs-form-element controlType="text" label="Status" property="model.status"}}
+
+  {{bs-button defaultText="Submit" type="primary" buttonType="submit"}}
+{{/bs-form}}
+
 {{outlet}}
