--- a/app/templates/tweets/index.hbs
+++ b/app/templates/tweets/index.hbs
@@ -1,5 +1,15 @@
 <div class="page-header">
-  <h1>Your Tweets</h1>
+  <h1>
+    Your Tweets
+
+    {{#if model.length}}
+      {{#link-to 'tweets.new'}}
+        {{#bs-button type="primary" buttonType="button" classNames="btn-xs"}}
+          Add Tweet
+        {{/bs-button}}
+      {{/link-to}}
+    {{/if}}
+  </h1>
 </div>
 
 <ul class="list-group">
