--- a/app/templates/tweets/index.hbs
+++ b/app/templates/tweets/index.hbs
@@ -20,7 +20,7 @@
           {{tweet_item.message}}
         </h4>
 
-        <p>Scheduled For: {{tweet_item.scheduled}}</p>
+        <p>Scheduled {{moment-from-now tweet_item.scheduled}}</p>
       {{/link-to}}
     </li>
   {{else}}
