--- a/app/templates/tweet/index.hbs
+++ b/app/templates/tweet/index.hbs
@@ -1,16 +1,18 @@
 <div class="page-header">
-  <h1>Tweet</h1>
+  <h1>
+    Tweet
+
+    {{#link-to 'tweet.edit' model}}
+      {{#bs-button type="primary" buttonType="button" classNames="btn-xs"}}
+        Edit
+      {{/bs-button}}
+    {{/link-to}}
+  </h1>
 </div>
 
 <p>{{model.message}}</p>
 <p>Scheduled {{moment-from-now model.scheduled}}</p>
 <p>Created on {{moment-format model.createdAt 'MMMM Do YYYY'}}</p>
 <p>{{model.status}}</p>
-
-{{#link-to 'tweet.edit' model}}
-  {{#bs-button type="primary" buttonType="button"}}
-    Edit
-  {{/bs-button}}
-{{/link-to}}
 
 {{outlet}}
