chore: power select + correct statuses

--- a/app/templates/tweet/index.hbs
+++ b/app/templates/tweet/index.hbs
@@ -13,6 +13,6 @@
 <p>{{model.message}}</p>
 <p>Scheduled {{moment-from-now model.scheduled}}</p>
 <p>Created on {{moment-format model.createdAt 'MMMM Do YYYY'}}</p>
-<p>{{model.status}}</p>
+<p>Status: {{model.status}}</p>
 
 {{outlet}}
