--- a/app/templates/tweet/edit.hbs
+++ b/app/templates/tweet/edit.hbs
@@ -4,8 +4,20 @@
 
 {{#bs-form model=this action="submit"}}
   {{bs-form-element controlType="textarea" label="Message" placeholder="Message" property="model.message"}}
+
   {{bs-form-element controlType="date" label="Scheduled" property="scheduled"}}
-  {{bs-form-element controlType="text" label="Status" property="model.status"}}
+
+  {{#bs-form-element label="Status"}}
+    {{#power-select
+      searchEnabled=false
+      selected=model.status
+      options=statuses
+      onchange=(action (mut model.status))
+      as |status|
+    }}
+      {{status}}
+    {{/power-select}}
+  {{/bs-form-element}}
 
   <div class="row">
     <div class="col-xs-6">
