chore: users can't explicitly set status

--- a/app/templates/tweet/edit.hbs
+++ b/app/templates/tweet/edit.hbs
@@ -3,7 +3,7 @@
 </div>
 
 {{#bs-form model=this action="submit"}}
-  {{tweet-form ctrl=this model=model}}
+  {{tweet-form model=model}}
 
   <div class="row">
     <div class="col-xs-6">
