--- a/app/templates/tweets/new.hbs
+++ b/app/templates/tweets/new.hbs
@@ -3,7 +3,7 @@
 </div>
 
 {{#bs-form model=this action="submit"}}
-  {{tweet-form ctrl=this model=model}}
+  {{tweet-form model=model}}
 
   {{bs-button defaultText="Submit" type="primary" buttonType="submit"}}
   {{bs-button defaultText="Cancel" action="cancel" buttonType="button"}}
